--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-This is the source code for Synodroid 2.0!
+This is the source code for Synodroid 2.x Free!
 
 It has been moved from Google code project hosting to github because github is much more friendly to use...
 
-Synodroid 1.1 source code is still available on Google code project: http://code.google.com/p/synodroid-ds/
+Ticketing will stay at http://code.google.com/p/synodroid-ds/
