--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -378,4 +378,8 @@
 
 <string name="selected">seleccionado(s)</string>
 <string name="upload_failed">Carga de los archivos en el NAS no. Vuelva a intentar ...</string>
+<string name="syno_pro_banner_text">Nuevas funcionalidad con Synodroid Pro. ¡Consíguelo!</string>
+<string name="err_nomarket_upgrade">Android market no está instalado en tu dispositivo\n\nContacta con los desarrolladores para obtener una copia de Synodroid Pro.</string>
+
+
 </resources>
