--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyEllipsis">
 
-<string name="app_name">Synodroid Pro</string>
+<string name="app_name">Synodroid</string>
 <string name="app_opensource">Opensource project</string>
 <string name="app_url">http://code.google.com/p/synodroid-ds/</string>
 
@@ -355,12 +355,12 @@
 <string name="dialog_message_confirm">&quot;La tarea no está completamente finalizada.¿Está seguro terminar la tarea?&quot;</string>
 <string name="menu_add">Añadir descarga</string>
 <string name="add_download_url_title">URL:</string>
-<string name="app_pro">Versión PRO</string>
+<string name="app_pro">Versión gratuita</string>
 <string name="app_google_plus">Añadenos a Google+ para mantenerte informado sobre Synodroid:</string>
 <string name="tab_about">Sobre</string>    
 <string name="tab_help">F.A.Q.</string>    
 <string name="gplus">Obtén ayuda en Google+</string>    
-<string name="description_logo">SynoDroid Pro</string>
+<string name="description_logo">SynoDroid</string>
 <string name="description_home">Inicio</string>
 <string name="description_search">Buscar</string>
 <string name="description_refresh">Actualizar</string>
