--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -257,7 +257,7 @@
 <string name="installTorrentSearchAlternate">Téléchargement alternatif pour Torrent Search</string>
 <string name="logo_search">Recherche de torrent</string>
 <string name="dialog_message_confirm_add">Etes-vous sûr de vouloir commencer le téléchargement de ce fichier?</string>
-<string name="provider_missing">Aucun moteur de recherche n\'est installé. Vous pouvez soit installer une version de DSM supérieure a 3.2 ou installer le moteur de recherche alternatif en appuyant sur le menu de mise-à-jour du moteur de recherche.\n\n Note: Vous devez redémarrer Synodroid après l\'installation du moteur de recherche alternatif pour activer la recherche.</string>
+<string name="provider_missing">Aucun moteur de recherche n\'est installé. Vous pouvez soit installer une version de DSM supérieure a 3.1 ou installer le moteur de recherche alternatif en appuyant sur le menu de mise-à-jour du moteur de recherche.\n\n Note: Vous devez redémarrer Synodroid après l\'installation du moteur de recherche alternatif pour activer la recherche.</string>
 <string name="searching">Recherche en cours...\n\n</string>
 <string name="no_results">Aucun résultat.\n\n</string>
 <string name="sites">Sites disponibles:\n</string>
@@ -438,7 +438,7 @@
 <string name="upgrade_st2">2. Téléchargement des Fichiers dans un Sous-Dossier</string>
 <string name="upgrade_t3">Synodroid Pro vous permet de définir la destination de votre téléchargement vers n\'importe quel dossier sur votre NAS, pas seulement vers les points de partage.</string>
 <string name="upgrade_st3">3. Actions sur Plusieurs Téléchargements</string>
-<string name="upgrade_t4">Synodroid Pro vous permet d\'effectuer des actions sur plusieur téléchargment à la fois en selectionant ces fichers dans la liste de téléchargement. (Seulement pour Android 3.x et 4.x. Bientôt disponible sur Android 1.x et 2.x)</string>
+<string name="upgrade_t4">Synodroid Pro vous permet d\'effectuer des actions sur plusieur téléchargment à la fois en selectionant ces fichers dans la liste de téléchargement.</string>
 <string name="upgrade_st4">4. Moteur de Recherche DSM</string>
 <string name="upgrade_t5">L\'intégration avec le moteur de recherche de votre NAS est une fonction disponible dans Synodroid Pro. Ceci vous permet de faire une recherche sur plusieur moteurs de recherche en même temps et de configurer la liste de site que vous voulez utiliser pour la recherche.</string>
 <string name="upgrade_st5">5. Apercu du Torrent avant le Téléchargement</string>
