--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -449,4 +449,10 @@
 <string name="tab_search">Suche</string>
 <string name="tab_pro">Pro</string>
 
+<string name="title_cat_debug">Debuggen</string>
+<string name="send_debug_logs">Debug-Logs anzeigen/verschicken</string>
+<string name="title_debug_logs">Ansicht der Synodroid Logs</string>
+<string name="btn_send">Verschicken</string>
+<string name="no_logs">Es wurden noch keine Logs erstellt. Aktivieren Sie das Debug-Log in den Einstellungen und versuchen Sie das Problem zu reproduzieren bevor Sie die Logs verschicken.</string>
+
 </resources>
