--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -454,4 +454,10 @@
 <string name="tab_search">Recherche</string>
 <string name="tab_pro">Pro</string>
 
+<string name="title_cat_debug">Débogage</string>
+<string name="send_debug_logs">Voir/Envoyer les journaux de débogage</string>
+<string name="title_debug_logs">Aperçu des journaux Synodroid</string>
+<string name="btn_send">Envoyer</string>
+<string name="no_logs">Il n\'y a pas de journaux de générés pour votre application en ce moment. Activer le débogage et faites des actions avec l\'application jusqu\'à ce que vous puissiez reproduire le problème. Vous pourrez ensuite envoyer les logs...</string>
+
 </resources>
