--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -453,4 +453,10 @@
 <string name="tab_search">Zoeken</string>
 <string name="tab_pro">Pro</string>
 
+<string name="title_cat_debug">Onderzoeken</string>
+<string name="send_debug_logs">Bekijk/Verzend logboeken</string>
+<string name="title_debug_logs">Synodroid logboek voorvertoning</string>
+<string name="btn_send">Verstuur</string>
+<string name="no_logs">Er zijn nog geen gebeurtenissen opgenomen in de logboeken. Zet Onderzoeken aan en verstuur de gebeurtenis door de fout opnieuw te simuleren en de logboeken de versturen...</string>
+
 </resources>
