--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -482,7 +482,7 @@
 <string name="detail_status_error_denied">Error: Destination denied</string>
 <string name="detail_status_error_quota">Error: Quota reached</string>
 <string name="detail_status_error_timeout">Error: Timeout</string>
-<string name="detail_status_error_max_fs_size">Error: Exceeded max file ssize</string>
+<string name="detail_status_error_max_fs_size">Error: Exceeded max file size</string>
 <string name="detail_status_error_broken">Error: Broken link</string>
 <string name="detail_status_error_full">Error: Disk full</string>
 <string name="detail_status_error_max_temp_file">Error: Exceeded max temporary file size</string>
